<resources>
    <string name="app_name">KK Business</string>

    <string name="kk_master_item_list">Master Item List</string>
    <string name="kk_list_items">List Items</string>
    <string name="kk_add_item">Add Item</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chooseLocation">Select Location</string>
    <string name="admin">Administration</string>
    <string name="reset">Reset</string>
    <string name="kk_address1_hint">Address1</string>
    <string name="kk_name_hint">Name</string>
    <string name="kk_address2_hint">Address2</string>
    <string name="kk_email_hint">Email</string>
    <string name="kk_mobile_hint">Mobile</string>
    <string name="kk_password_hint">Password</string>
    <string name="kk_reenter_password_hint">Reenter Password</string>
    <string name="kk_city_hint">City</string>
    <string name="kk_state_hint">State</string>
    <string name="kk_cancel_button">Cancel</string>
    <string name="kk_register_button">Register</string>
    <string name="kk_text_location_advice">Please select the button below if you are currently in your home. Your home location helps us in delivering things easily. If you are not currently at home, don\'t select it. You can choose location later.\n अगर आप अभी अपने पते पर हैं तो कृपया नीचे दिए बटन को सेलेक्ट करें। आपके सही स्थान से हमें सामान पहुंचाने में आसानी होती है। अगर अभी आप अपने पते पर नहीं हैं तो कृपया इसे छोड़ दें। जब आप अपने पते पर पहुंचे तो आप अपने स्थान को सेलेक्ट कर सकते हैं। </string>
    <string name="photo">Photo</string>
    <string name="barcodeWillAppearHere">Bar code value will appear hear</string>
    <string name="measurement_category">Measurement Category</string>
    <string name="kk_add_category">Add Category</string>
    <string name="kk_measurement_category_addition_failed">Measurement Category Addition Failed</string>
    <string name="kk_add_measurement_category">Add Unit Category</string>
    <string name="primaryUnit">Primary Unit</string>
    <string name="unit">Unit</string>
    <string name="kk_add_unit">Add Unit</string>
    <string name="kk_factor">1.0</string>
    <string name="fractional">Fractional</string>
    <string name="kk_measurement_unit_addition_failed">Measurement Unit Additional Failed</string>
    <string name="kk_add_measurement_unit">Add Unit</string>
    <string name="unit_activity_label">KhanaKiranaUnitActivity</string>
    <string name="category_activity_label">KhanaKiranaCategoryActivity</string>
    <string name="acronym">Acronym</string>
    <string name="measurement_category_dialog_title">Add Unit Category</string>
    <string name="unit_dialog_title">Add Unit</string>
    <string name="add_item_to_master_list">Add to Master List</string>
    <string name="item_title">Item Title</string>
    <string name="item_description">Please enter item description</string>
    <string name="kk_add_master_item">Add Item</string>
    <string name="kk_master_item_addition_failed">Master Item %s additional failed</string>
    <string name="kk_add_item_category">Add Item Category</string>
    <string name="item_category_activity_label">Item Category</string>
    <string name="item_category">Item Category</string>
    <string name="item_category_description">Item Category Description</string>
    <string name="kk_root">+</string>
    <string name="kk_item_category_operation_failed">Item Category Operation Failed</string>
    <string name="kk_businessname_hint">Business Name</string>
    <string name="kk_address_hint">Address</string>
    <string name="kk_business_user_not_approved">Business User is not approved.\\nPlease wait for approval.</string>
    <string name="kk_registration_failed_message">User registration failed.\\nPlease try again.</string>
    <string name="update_location">Update Location</string>
</resources>
