<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/registration_google_user_view">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registration_google_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_name_hint"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/kk_address1_hint"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:singleLine="false"
            android:minLines="3"
            android:maxLines="5"
            android:lines="3" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_email_hint"/>

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:hint="@string/kk_mobile_hint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="Bhopal"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:hint="@string/kk_city_hint"/>

            <EditText
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MP"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:hint="@string/kk_state_hint"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kk_text_location_advice"
            android:id="@+id/textView7"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/cancel"
            android:textSize="@dimen/kk_text_small"/>

        <CheckBox
            android:id="@+id/chooseLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/kk_registration_popup_text_size"
            android:text="@string/chooseLocation"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_cancel_button"
                android:layout_alignParentLeft="true"
                android:onClick="cancelRegister"/>

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="@dimen/kk_registration_popup_text_size"
                android:text="@string/kk_register_button"
                android:layout_alignParentRight="true"
                android:onClick="registerUser"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>