<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adding_measurement_unit"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/kk_app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KhanaKiranaMainActivity">

    <LinearLayout
        android:id="@+id/pictureLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="@color/kk_app_foreground"
        android:textSize="@dimen/kk_registration_popup_text_size">

        <Spinner
            android:id="@+id/measurement_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/kk_app_foreground"
            android:textSize="@dimen/kk_registration_popup_text_size" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/unit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/unit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.7"
            android:textColor="@color/kk_app_foreground" />
        <EditText
            android:id="@+id/unit_acronym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/acronym"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.3"
            android:textColor="@color/kk_app_foreground" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/primaryUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primaryUnit"
            android:textColor="@color/kk_app_foreground"
            android:textSize="@dimen/kk_registration_popup_text_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/kk_factor"
            android:id="@+id/factor"
            android:textColor="@color/kk_app_foreground"
            android:textSize="@dimen/kk_registration_popup_text_size" />

        <Button
            android:id="@+id/add_measurement_category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="addMeasurementUnit"
            android:text="@string/kk_add_unit"
            android:textColor="@color/kk_app_foreground" />

    </LinearLayout>

</RelativeLayout>
